--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
-   version="6.0">
+<web-app 
+    xmlns="https://jakarta.ee/xml/ns/jakartaee"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee 
+                        https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+    version="6.0">
+
+    <!-- Nombre de la aplicación -->
+    <display-name>CinePlanetWeb</display-name>
+
+    <!-- ========================= -->
+    <!--  CONFIGURACIÓN DE SESIÓN  -->
+    <!-- ========================= -->
     <session-config>
-        <session-timeout>
-            30
-        </session-timeout>
+        <!-- Timeout de sesión en minutos -->
+        <session-timeout>30</session-timeout>
     </session-config>
+
+    <!-- ========================= -->
+    <!--   PÁGINA DE BIENVENIDA     -->
+    <!-- ========================= -->
     <welcome-file-list>
-    <welcome-file>login.html</welcome-file>
+        <!-- Al navegar a la raíz, invoca el LoginServlet -->
+        <welcome-file>login</welcome-file>
     </welcome-file-list>
+
+    <!-- ========================= -->
+    <!--  REFERENCIA A DATASOURCE   -->
+    <!-- ========================= -->
+    <resource-ref>
+        <description>Base de datos Cineplanet</description>
+        <res-ref-name>jdbc/CineDb</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
+    <!-- ========================= -->
+    <!--     DEFINICIÓN DE SERVLETS -->
+    <!-- ========================= -->
+    <!-- Login -->
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>com.cineplanet.controller.LoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
+    <!-- Registro -->
+    <servlet>
+        <servlet-name>RegisterServlet</servlet-name>
+        <servlet-class>com.cineplanet.controller.RegisterServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RegisterServlet</servlet-name>
+        <url-pattern>/register</url-pattern>
+    </servlet-mapping>
+
+    <!-- Cartelera -->
+    <servlet>
+        <servlet-name>CarteleraServlet</servlet-name>
+        <servlet-class>com.cineplanet.controller.CarteleraServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CarteleraServlet</servlet-name>
+        <url-pattern>/cartelera</url-pattern>
+    </servlet-mapping>
+
+    <!-- ========================= -->
+    <!--   FILTRO DE ENCODING UTF-8 -->
+    <!-- ========================= -->
+    <filter>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>org.apache.catalina.filters.SetCharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>ignore</param-name>
+            <param-value>false</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>EncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <!-- ========================= -->
+    <!--       CONFIG. JSP         -->
+    <!-- ========================= -->
+    <jsp-config>
+        <jsp-property-group>
+            <url-pattern>*.jsp</url-pattern>
+            <page-encoding>UTF-8</page-encoding>
+            <scripting-invalid>true</scripting-invalid>
+        </jsp-property-group>
+    </jsp-config>
+
+    <!-- ========================= -->
+    <!--       PÁGINA DE ERROR     -->
+    <!-- ========================= -->
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/WEB-INF/jsp/error.jsp</location>
+    </error-page>
 
 </web-app>
